WebApp/webApp/logs/nohup.out.bak20181206174443
Traceback (most recent call last):
  File "./main/main.py", line 5, in <module>
    from handle import Handle
  File "/opt/WeChatDYH/webapp/main/handle.py", line 48
    with open('./handle.txt', 'w') as f:
    ^
IndentationError: unexpected indent
